--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -7,7 +7,9 @@
     padding: 2rem 0 1rem;
   }
 
-  @media (max-width: 575px) {
-    text-align: center;
+  @media (max-width: 767px) {
+    p, ul {
+      text-align: center;
+    }
   }
 }
